--- a/package.json
+++ b/package.json
@@ -3,9 +3,14 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@material-ui/core": "^3.0.3",
+    "@material-ui/icons": "^3.0.1",
     "react": "^16.5.0",
     "react-dom": "^16.5.0",
-    "react-scripts": "1.1.5"
+    "react-reveal": "1.2.2",
+    "react-scripts": "1.1.5",
+    "react-scroll": "1.7.9",
+    "react-slick": "0.23.1"
   },
   "scripts": {
     "start": "react-scripts start",
