--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "react-reveal": "1.2.2",
     "react-scripts": "1.1.5",
     "react-scroll": "1.7.9",
-    "react-slick": "0.23.1"
+    "react-slick": "^0.23.1",
+    "slick-carousel": "^1.8.1"
   },
   "scripts": {
     "start": "react-scripts start",
